# uchebnaya_pr

./: .env  docker-compose-develop.yaml  pyproject.toml
src/: config.py  database.py  exceptions.py  state.py
src/gui/: RepairShop.py
src/gui/Base/: BaseRole.py
src/gui/interface/: AdminInterface.py  CustomerInterface.py  ManagerInterface.py  MasterInterface.py  OperatorInterface.py
src/model/: base.py
src/model/auth/: domain.py  models.py  schemes.py  test_services.py
src/model/auth/repos/: user_repo.py
src/model/auth/services/: role_service.py  user_service.py
src/model/requests/: domain.py  models.py  schemes.py
src/model/requests/repo/: commet_repo.py  detail_repo.py  request_repo.py  request_status_repo.py  tech_type_repo.py  used_detail_repo.py
src/model/requests/services/: comment_service.py  detail_service.py  request_status_service.py  requests_service.py  tech_type_service.py  used_details_service.py
