[tool.poetry]
name = "uchebnaya-pr"
version = "0.1.0"
description = ""
authors = ["ondrei <lagno.andreu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.3"
psycopg2 = "^2.9.10"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
